# JobPortal

./: AUTH_FIX.md  DEPLOYMENT_GUIDE.md  TODO.md  app.py  auth_helper.ps1  auth_helper.sh  create_pr.py  database.db  fix_auth.bat  fix_database.py  migrate_status.py  pyproject.toml  requirements.txt  test_fix.py  token_auth.bat  vercel.json
api/: index.py
backend/: app.py  database.db
static/css/: admin.css  admin_login.css  style.css
static/js/: admin.js  jobs.js  script.js
templates/: apply.html  companies.html  index.html  jobs.html  login.html  my_applications.html  register.html
templates/admin/: add_job.html  applications.html  dashboard.html  login.html  manage_jobs.html
