[project]
name = "jobportal"
version = "1.0.0"
description = "Online Job Portal Website"
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.vercel]
output = "backend"
pythonVersion = "3.9"

[tool.vercel.build]
command = "pip install -r requirements.txt"

[project.scripts]
app = "backend.app:app"

