[project]
name = "jobportal"
version = "1.0.0"
description = "Online Job Portal Website"
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.vercel]
output = "backend"
pythonVersion = "3.11"

[project.scripts]
app = "backend.app:app"

